Ajuste na frase central e botão

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
   <!-- Frase central e botão -->
   <div class="frase-central">
-    <p>Tenho uma coisinha pra te dizer...</p>
-    <button class="botao-surpresa" onclick="mostrarAlerta()">Clique aqui pra uma surpresa</button>
+    <p>Tenho uma coisinha para te dizer...</p>
+    <button class="botao-surpresa" onclick="mostrarAlerta()">Clique aqui para uma surpresa</button>
   </div>
 
   <!-- Bootstrap JS (necessário pro carrossel) -->
